--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bwrmernproj",
+  "name": "rapmernproject",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,10 +23,10 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "set PORT=3003 && react-scripts start",
+    "build": "set PORT=3003 &&  react-scripts build",
+    "test": "set PORT=3003 &&  react-scripts test",
+    "eject": "set PORT=3003 &&  react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
